--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
       <h2>Desafio Suporte</h2>
-      <form action="controle.php" method = "POST"></form>
+      <form action="controle.php" method = "POST">
         <div class="row">
           <div class="col-75">
             <div class="container">
